--- a/app/Resources/views/default/partials/header.html.twig
+++ b/app/Resources/views/default/partials/header.html.twig
@@ -1,9 +1,9 @@
-<header class="masthead" style="background-image: url('{{ asset('assets/img/home-bg.jpg') }}')">
+<header class="masthead" style="background-image: url('{{ asset('assets/img/newspaper.jpg') }}')">
     <div class="container">
         <div class="row">
             <div class="col-lg-8 offset-lg-2 col-md-10 offset-md-1">
                 <div class="site-heading">
-                    <h1>Distract</h1>
+                    <h1>Distraction</h1>
                     <span class="subheading">All your favourite news in one place</span>
                 </div>
             </div>
